# fast_baum_welch

./: CMakeLists.txt  Flops per Implementation.md  LICENSE  Makefile  README.md
benchmarks/: bandwidth_bench.cc  basic_test.cc  roofline.cc  run_bench.cc
include/: baum_welch.h  benchmark.h  bw.h  bw_baseline.h  generator.h  hmm.h  infra.h  tsc_x86.h  validation.h
input/: observations.txt  sample.txt
plot_scripts/: plot_compilers.py  plot_performance.py  plot_time.py
scripts/: calculate_error.py  obs_generator.py  run_bw.sh
src/: baum_baseline_impl.cc  baum_welch_util.cc  benchmark.cc  bw.cc  bw_baseline.cc  bw_basic_opts.cc  bw_util.cc  generator.cc  hmm.cc  infra.cc  test.cc  validation.cc
src/baum_welch/: basic_opts_manos.cc  baum_baseline_impl.cc  baum_baseline_opts.cc  baum_welch_libHMM.cc  bw.cc  bw_basic_opts.cc  bw_loop_unroll.cc  bw_loop_unroll_opt.cc  bw_opts_blocking+unrolling.cc  bw_opts_blocking.cc  bw_opts_v2.cc  bw_vectorized_1.cc  bw_vectorized_dim.cc  bw_vectorized_dim2+blocking.cc  bw_vectorized_dim2.cc  bw_vectorized_opt.cc  bw_vectorized_unroll.cc
